# desert_rose_ggads

./: .gitignore  main.py  pyproject.toml  requirements.txt  x.csv
.github/workflows/: main.yaml
controller/: bigquery.py  storage.py
test/: test_units.py
