[tool.poetry]
name = "desert_rose_ggads"
version = "0.1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
dateparser = "^1.1.0"
google-cloud-bigquery = "^2.30.1"
google-cloud-storage = "^1.42.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.10b0"
types-dateparser = "^1.0.7"
pytest-timeout = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"
timeout = 120
testpaths = [
    "test",
]

